# Homework_3_Yves_Nazon

./: CMakeLists.txt  README.md  package.xml  package.xml~  planar_robot.gv  planar_robot.py  planar_robot.urdf  planar_robot.urdf~
Desktop/baxter_stuff/src/baxter_builder/scripts/: baxter_mover.py
Desktop/catkin_ws_dos/src/hw2/: CMakeLists.txt  CMakeLists.txt~  README.md  planar_robot.py  planar_robot.urdf~
Desktop/catkin_ws_dos/src/hw2/launch/: pl_bot.launch  pl_bot.launch~
Desktop/catkin_ws_dos/src/hw2/nodes/: planar_robot.py  planar_robot_listener.py
Desktop/catkin_ws_dos/src/hw2/urdf/: planar_robot.urdf
Desktop/homework_3/src/Homework_3_Yves_Nazon/gazebo/worlds/: turtle_world.world
launch/: pl_bot.launch  pl_bot.launch~  robotrviz.rviz
nodes/: planar_robot.py  planar_robot_listener.py
urdf/: planar_robot.urdf
