<package>
  <name>hw2</name>
  <version>1.0.0</version>
  <description>Create a 2 link planar robot</description>
  <maintainer email="yvesnazon2020@u.northwestern.edu">Yves Nazon II</maintainer>

  <license>BSD</license>


 <!-- <author>Yves Nazon II</author>

  <!- Dependencies which this package needs to build itself. ->
  <buildtool_depend>catkin</buildtool_depend>

  <!- Dependencies needed to compile this package. ->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>common_rosdeps</build_depend>

  <!- Dependencies needed after this package is compiled. ->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>common_rosdeps</run_depend> -->

</package>
